<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingHorizontal="16dp">

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="48dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvCollectionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/collections"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/etLabel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rectangle_8"
        android:ellipsize="end"
        android:hint="@string/add_new_label"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="56dp"
        android:scrollHorizontally="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCollectionsTitle" />

    <TextView
        android:id="@+id/tvAddLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/add"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/etLabel"
        app:layout_constraintEnd_toEndOf="@id/etLabel"
        app:layout_constraintTop_toTopOf="@id/etLabel" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupLabels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:chipSpacingVertical="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLabel"
        app:singleSelection="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        style="Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="0dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="14dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/black"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>